log/build_2025-04-21_12-42-00/py_pubsub/stderr.log
  File "/home/barenbo/Desktop/Code/robot/lab2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher_member_function.py", line 51
    else if ((self.front_sensor > 1) or (self.leftmost_scan >= 2.3)):
         ^^
SyntaxError: expected ':'

